added a ton of animations and stuff

--- a/food.html
+++ b/food.html
@@ -7,11 +7,11 @@
 <body>
   <h1>an entire page dedicated to food</h1>
   <section>
-    <h2>Woah. Where am I?</h2>
-    <p>insert weird text here</p>
+    <h2>You can't be serious...</h2>
+    <p>oh yes i am :)</p>
   </section>
   <section>
-    <h2>Okay, well why are you making this?</h2>
+    <h>my ALL TIME FAVORITE FOODS OF ALL TIME</h>
     <ul>
       <li>Command Line</li>
       <li>HTML</li>
