--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
   <title>Blogasaurus</title>
 </head>
 <body>
-  <h1>What I Like</h1>
+  <h1>
+    <a href="" class="typewrite" data-period="6000" data-type='[ "What I Like" ]'>
+    </a>
+  </h1>
   <section>
     <h2>Woah. Where am I?</h2>
-    <p>insert weird text here</p>
+    <p>You are in the Matrix. lol just kidding you're on my personal blog.</p>
   </section>
   <section>
     <h2>Okay, well why are you making this?</h2>
+    <p> There are a few reasons for that :)</p>
     <ul>
-      <li>Command Line</li>
-      <li>HTML</li>
-      <li>CSS</li>
+      <li>I like my computer</li>
+      <li>I love talking about things that make me happy</li>
+      <li>I was required to</li>
     </ul>
   </section>
   <section>
@@ -64,28 +68,9 @@
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
 </div>
 
 <script src="other.js"></script>
 
 </body>
-<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=40 height=641 style='position:absolute; left:95%; top:34px; width:20; height:641px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=5 scrolldelay=10 height=575 style='position:absolute; left:66%; top:41px; width:20; height:575px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=23 height=630 style='position:absolute; left:44%; top:103px; width:20; height:630px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=4 scrolldelay=38 height=631 style='position:absolute; left:40%; top:106px; width:20; height:631px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=6 scrolldelay=16 height=536 style='position:absolute; left:44%; top:16px; width:20; height:536px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=3 scrolldelay=47 height=683 style='position:absolute; left:32%; top:88px; width:20; height:683px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=43 height=693 style='position:absolute; left:70%; top:140px; width:20; height:693px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=11 height=570 style='position:absolute; left:74%; top:97px; width:20; height:570px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=6 scrolldelay=15 height=548 style='position:absolute; left:81%; top:57px; width:20; height:548px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=2 scrolldelay=35 height=551 style='position:absolute; left:44%; top:131px; width:20; height:551px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=2 scrolldelay=14 height=573 style='position:absolute; left:20%; top:97px; width:20; height:573px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=35 height=629 style='position:absolute; left:13%; top:162px; width:20; height:629px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=23 height=522 style='position:absolute; left:29%; top:185px; width:20; height:522px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=41 height=687 style='position:absolute; left:19%; top:176px; width:20; height:687px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=18 height=514 style='position:absolute; left:59%; top:99px; width:20; height:514px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=5 scrolldelay=10 height=579 style='position:absolute; left:54%; top:185px; width:20; height:579px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=2 scrolldelay=37 height=600 style='position:absolute; left:82%; top:55px; width:20; height:600px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=3 scrolldelay=35 height=583 style='position:absolute; left:61%; top:136px; width:20; height:583px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=4 scrolldelay=33 height=600 style='position:absolute; left:32%; top:153px; width:20; height:600px;'><font color=#ffcccc>♥</font></marquee>
-<marquee behavior=scroll direction=down scrollamount=5 scrolldelay=31 height=687 style='position:absolute; left:64%; top:56px; width:20; height:687px;'><font color=#ffcccc>♥</font></marquee>
