--- a/hobbies.html
+++ b/hobbies.html
@@ -27,48 +27,28 @@
     <h2> I'm in! </h2>
     <h5> (That 70's Show) </h5>
     <br>
+  </section>
 
-    <!-- Slideshow container -->
-<div class="slideshow-container">
+  <marquee behavior=scroll direction=down scrollamount=1 scrolldelay=40 height=641 style='position:absolute; left:95%; top:34px; width:20; height:641px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=5 scrolldelay=10 height=575 style='position:absolute; left:66%; top:41px; width:20; height:575px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=1 scrolldelay=23 height=630 style='position:absolute; left:44%; top:103px; width:20; height:630px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=4 scrolldelay=38 height=631 style='position:absolute; left:40%; top:106px; width:20; height:631px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=6 scrolldelay=16 height=536 style='position:absolute; left:44%; top:16px; width:20; height:536px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=3 scrolldelay=47 height=683 style='position:absolute; left:32%; top:88px; width:20; height:683px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=1 scrolldelay=43 height=693 style='position:absolute; left:70%; top:140px; width:20; height:693px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=1 scrolldelay=11 height=570 style='position:absolute; left:74%; top:97px; width:20; height:570px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=6 scrolldelay=15 height=548 style='position:absolute; left:81%; top:57px; width:20; height:548px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=2 scrolldelay=35 height=551 style='position:absolute; left:44%; top:131px; width:20; height:551px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=2 scrolldelay=14 height=573 style='position:absolute; left:20%; top:97px; width:20; height:573px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=1 scrolldelay=35 height=629 style='position:absolute; left:13%; top:162px; width:20; height:629px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=1 scrolldelay=23 height=522 style='position:absolute; left:29%; top:185px; width:20; height:522px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=1 scrolldelay=41 height=687 style='position:absolute; left:19%; top:176px; width:20; height:687px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=1 scrolldelay=18 height=514 style='position:absolute; left:59%; top:99px; width:20; height:514px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=5 scrolldelay=10 height=579 style='position:absolute; left:54%; top:185px; width:20; height:579px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=2 scrolldelay=37 height=600 style='position:absolute; left:82%; top:55px; width:20; height:600px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=3 scrolldelay=35 height=583 style='position:absolute; left:61%; top:136px; width:20; height:583px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=4 scrolldelay=33 height=600 style='position:absolute; left:32%; top:153px; width:20; height:600px;'><font color=#ffcccc>♥</font></marquee>
+  <marquee behavior=scroll direction=down scrollamount=5 scrolldelay=31 height=687 style='position:absolute; left:64%; top:56px; width:20; height:687px;'><font color=#ffcccc>♥</font></marquee>
 
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 4</div>
-    <img src="http://24.media.tumblr.com/857541e4a65bac3c0669d13c21cb3ef8/tumblr_n0fvvwWaQI1romohbo1_500.gif" style="width:100%">
-    <div class="text">amusement parks.</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 4</div>
-    <img src="https://i.pinimg.com/originals/65/69/20/656920c9f596e9f9b20018966fed13eb.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 4</div>
-    <img src="https://media.giphy.com/media/Rt3lxL2PlR1zW/giphy.gif" style="width:100%">
-    <div class="text">concerts.</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">4 / 4</div>
-    <img src="https://66.media.tumblr.com/74ccd0583f5a99361debe31100ebeccc/tumblr_mt3yhsppZZ1sfwvego1_400.gif" style="width:100%">
-    <div class="text">that 70's show.</div>
-  </div>
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
-
-<script src="other.js"></script>
 
 </body>
